# spa-device

./: .gitignore  BUILD.md  Cargo.toml  DESIGN.md  ENGINEERING.md  LICENSE-APACHE  README.md  rsync.sh
.github/workflows/: release.yml
argus-questions/: 001-answers.md  001-host-reported-service-hosting.md  002-answers.md  002-service-identity-and-node-agent.md  003-answers.md  004-bundle-wire-format.md  005-gate-knock-identity.md
deploy/: spa-gated.service
deploy/ansible/: README.md  ansible.cfg  gate.yml  inventory.example.ini
scripts/: build-gate-release.sh  e2e-agent.sh  e2e-bundle-token.sh  e2e-cloak.sh  e2e-config.sh  e2e-conntrack.sh  e2e-descriptor.sh  e2e-enroll.sh  e2e-failclosed.sh  e2e-fips.sh  e2e-ratelimit.sh  e2e-selfprovision.sh  e2e-v6.sh
spa-agent/: Cargo.toml
spa-agent/src/: catalog.rs  lib.rs  main.rs  proxy.rs  resolver.rs  tundev.rs
spa-client/: Cargo.toml
spa-client/src/: lib.rs  main.rs
spa-common/: Cargo.toml
spa-common/src/: lib.rs
spa-core/: Cargo.toml
spa-core/src/: lib.rs
spa-crypto/: Cargo.toml
spa-crypto/src/: lib.rs
spa-ebpf/: Cargo.toml
spa-ebpf-common/: Cargo.toml
spa-ebpf-common/src/: lib.rs
spa-ebpf/.cargo/: config.toml
spa-ebpf/src/: main.rs
spa-gated/: Cargo.toml
spa-gated/src/: adapters.rs  audit.rs  bundle.rs  config.rs  cp.rs  main.rs  nft.rs
