[package]
name = "spa-gated"
version = "0.1.0"
edition = "2021"

# The SPA gate daemon (Linux-only): loads the XDP data plane, attaches it,
# manages the BPF maps, and runs the knock-verification loop by wiring the pure
# spa-core Gatekeeper to real adapters (aya maps, system clocks, in-memory
# replay, config-driven trust). Excluded from the workspace; built on the Linux
# host. See DESIGN.md §3.2.

[dependencies]
spa-common = { path = "../spa-common" }
spa-core = { path = "../spa-core" }
spa-crypto = { path = "../spa-crypto" }
spa-ebpf-common = { path = "../spa-ebpf-common", features = ["user"] }
aya = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
libc = "0.2"
# Control-plane self-provisioning only (identity report + bundle pull), off the
# packet fast path. rustls pinned to the shared aws-lc-rs provider (the
# -no-provider feature drops reqwest's default `ring`, so there is no second
# crypto stack); blocking so the sync daemon needs no async runtime of its own.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls-webpki-roots-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12", "logging"] }
